# movie_etl_airflow_pipeline

./: .gitignore  README.md  dockerfile  pyproject.toml
movies_etl/: dynamic_visualisation.py  movies_airflow_functions.py  movies_dag.py  read_write_s3.py  scraping.py  visualization_tools.py
tests/: test_read_write_s3.py  test_scraping.py
